--- a/lecture04_css/assignment-navigation bar/hover_list.html
+++ b/lecture04_css/assignment-navigation bar/hover_list.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="hover_list_css.css">
     </head>
     <body>
+      <div class="nav">  
         <ol >
             <li id="l1"style="display:inline; margin-left:10px"><a href="#">item1</a>
               <ol>
@@ -45,15 +46,36 @@
                 </ol>
             </li>
 
-                <li id="l1" style="display:inline; margin-left:382px"><a href="#">item3</a>
+            <li id="l1" style="display:inline; margin-left:382px"><a href="#">item3</a>
                     <ol>
                         <li>sub-item3.1</li>
                         <li>sub-item3.2</li>
                         <li>sub-item3.3</li>
                     </ol>
+            </li>
+
+            <li id="l1" style="display:inline ; margin-left:568px"><a href="#">item4</a>
+                <ol>
+                    <li id="l2">sub-item4.1
+                        <ol>
+                            <li>sub-item4.1.1</li>
+                            <li>sub-item4.1.2</li>
+                            <li>sub-item4.1.3</li>
+                        </ol>
                     </li>
+                    <li id="l2">sub-item4.2
+                        <ol>
+                            <li>sub-item4.2.1</li>
+                            <li>sub-item4.2.2</li>
+                            <li>sub-item4.2.3</li>
+                        </ol>
+                    </li>
+                    <li>sub-item4.3</li>
+                </ol>
+            </li>
             
         </ol>
+      </div>  
         <pre>   
 
 
