--- a/lecture05_javasricpt/flex/index.html
+++ b/lecture05_javasricpt/flex/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>flex</title>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="item">1</div>
-        <div class="item">2</div>
+        <div class="item item2">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
         <div class="item">5</div>
